<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".UI.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/prof"/>

                <TextView
                    android:id="@+id/create_post_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/rounded_stroke"
                    android:layout_marginStart="10dp"
                    android:text="@string/create_your_blog"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"/>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/all"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/selected"/>

                    <TextView
                        android:id="@+id/cone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/one"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/unsilectec"/>

                    <TextView
                        android:id="@+id/ctwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/two"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/unsilectec"/>

                    <TextView
                        android:id="@+id/cthree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/three"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/unsilectec"/>

                    <TextView
                        android:id="@+id/cfour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/four"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/unsilectec"/>

                    <TextView
                        android:id="@+id/cfive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/five"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/unsilectec"/>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:background="@drawable/background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/error"
                    android:tint="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="No blog found"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>