<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/post_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@color/colorAccent"
    android:padding="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/prof"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/_01_jan_2000"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/blog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/blog_title_here"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_margin="10dp"
        android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unspecimen_book"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/blog_image"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="230dp"
        android:background="@color/colorGrey"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/stroke">

        <LinearLayout
            android:id="@+id/like_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/like"
                android:tint="@color/colorDarkGrey"/>

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="246"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"/>


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorDarkGrey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/views_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/visible"
                android:tint="@color/colorDarkGrey"/>

            <TextView
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="576"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>