<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".UI.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/prof" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/_01_jan_2000"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/blog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/blog_title_here"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unspecimen_book"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/blog_image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey"
                />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unspecimen_book"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/blog_image_two"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unspecimen_book"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/blog_image_three"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unspecimen_book"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/blog_image_four"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey"
                    android:scaleType="centerCrop" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>